--- a/about.html
+++ b/about.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head>My Blog</head>
 <body>
 <header></header>
-<h1>My blog</h1>
+<h1>My Blog</h1>
 </header>
 <nav>
     <ul>
