--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
 <body>
-
-<h2>My blog</h2>
-
-<p><a href="index.html">Index</a></p>
-<p><a href="about.html">About</a></p>
-<p><a href="contact.html">Contact</a></p>
+<header></header>
+<h1>My Blog</h1>
+</header>
+<nav>
+    <ul>
+<h2><a href="index.html">Index</a></h2>
+<h2><a href="about.html">About</a></h2>
+<h2><a href="contact.html">Contact</a></h2>
+</ul>
+</nav>
 
 </body>
 </html>
