--- a/index.html
+++ b/index.html
@@ -74,5 +74,11 @@ The player can try to escape, but the chances are low due to the hound's speed, 
 </table>
 </article>
 </section>
+<h4>Email Signup</h4>
+<form>
+  <label for="email">Email:</label><br>
+  <input type="text" id="email" name="email"><br>
+  <input type="submit" value="Submit">
+</form>
 </body>
 </html>
