--- a/about.html
+++ b/about.html
@@ -11,6 +11,26 @@
 <h2><a href="contact.html">Contact</a></h2>
 </ul>
 </nav>
-
+<h3>About Me</h3>
+<img src="MINIME.jpg" alt="MeIcon" width="300" height="300">
+<p>My name is Benjamin Trinh and I am a game design student in the Games and Interactive Media Major at Michigan State University.​ I mainly focus on game design, writing, and storytelling. I've always been interested in games and interactive storytelling medium and hope to expand it's potential to create unique and exciting experiences.</p>
+<p>Skills</p>
+<ul>
+Google Applications
+Adobe PS, Audition, Premiere
+Microsoft Word
+Construct 3
+Unity
+Unreal Engine
+Krita
+Figma
+Tabletopia
+RPG Maker MV
+Level Design
+UI Design
+Game Writing
+Game Design
+Concept Design
+</ul>
 </body>
 </html>
