--- a/about.html
+++ b/about.html
@@ -13,7 +13,9 @@
 </nav>
 <h3>About Me</h3>
 <img src="MINIME.jpg" alt="MeIcon" width="300" height="300">
-<p>My name is Benjamin Trinh and I am a game design student in the Games and Interactive Media Major at Michigan State University.<br>​ I mainly focus on game design, writing, and storytelling.<br> I've always been interested in games and interactive storytelling medium and hope to expand it's potential to create unique and exciting experiences.</p>
+<p>My name is Benjamin Trinh and I am a game design student in the Games and Interactive Media Major at Michigan State University.<br>​ 
+I mainly focus on game design, writing, and storytelling.<br>
+I've always been interested in games and interactive storytelling medium and hope to expand it's potential to create unique and exciting experiences.</p>
 <p>Skills</p>
 <ul>
 Google Applications
