--- a/about.html
+++ b/about.html
@@ -16,23 +16,11 @@
 <p>My name is Benjamin Trinh and I am a game design student in the Games and Interactive Media Major at Michigan State University.<br>​
 I mainly focus on game design, writing, and storytelling.<br>
 I've always been interested in games and interactive storytelling medium and hope to expand it's potential to create unique and exciting experiences.</p>
-<p>Skills</p>
+<p>What I can do</p>
 <ul>
-Google Applications
-Adobe PS, Audition, Premiere
-Microsoft Word
-Construct 3
-Unity
-Unreal Engine
-Krita
-Figma
-Tabletopia
-RPG Maker MV
-Level Design
-UI Design
-Game Writing
-Game Design
-Concept Design
+<li>Applications: Adobe PS, Audition, Premiere, Krita, Figma, Tabletopia</li>
+<li>Skills: Level Design, UI Design, Game Writing, Game Design, Concept Design</li>
+<li>Construct 3, Unity, Unreal Engine, RPG Maker MV</li>
 </ul>
 </body>
 </html>
