--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,30 @@
 <h2><a href="contact.html">Contact</a></h2>
 </ul>
 </nav>
+<h3>Contact Me:</h3>
+<form action="/action_page.php">
+  <label for="name">Name:</label><br>
+  <input type="text" id="name" name="name""><br>
+  <label for="Email">Email:</label><br>
+  <input type="text" id="Email" name="Email"><br>
+<label for="Reason">Reason:</label>
+<select id="myDropdown" name="myDropdown">
+  <option value="hi">Saying hi</option>
+  <option value="contractor">Looking for a contractor</option>
+  <option value="interview">Interested in an interview</option>
+</select>
+  <label for="Comment">Comments:</label><br>
+  <input type="text" id="Comment" name="Comment""><br>
+  <br>
+  <input type="submit" value="Submit">
+</form>
 
+<p>Name
+Email address
+Reason for contact (drop down menu): saying hi, looking for a contractor, interested in an interview
+Textarea for open comment
+Submit button
+Your form does not need to submit anywhere, just make sure your markup is valid and sound
+</p>
 </body>
 </html>
