--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@ The player can try to escape, but the chances are low due to the hound's speed, 
 <h4>Email Signup</h4>
 <form>
   <label for="email">Email:</label><br>
-  <input type="text" id="email" name="email"><br>
-  
+  <input type="text" id="email" name="email"><br><br>
+
   <input type="submit" value="Submit">
 </form>
 </body>
