--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
   <option value="hi">Saying hi</option>
   <option value="contractor">Looking for a contractor</option>
   <option value="interview">Interested in an interview</option>
-</select>
+</select><br>
   <label for="Comment">Comments:</label><br>
   <input type="text" id="Comment" name="Comment""><br>
   <br>
