--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
   <input type="text" id="name" name="name""><br>
   <label for="Email">Email:</label><br>
   <input type="text" id="Email" name="Email"><br>
-<label for="Reason">Reason:</label>
+<label for="Reason">Reason:</label><br>
 <select id="myDropdown" name="myDropdown">
   <option value="hi">Saying hi</option>
   <option value="contractor">Looking for a contractor</option>
