--- a/about.html
+++ b/about.html
@@ -5,11 +5,13 @@
 <h1>My Blog</h1>
 </header>
 <nav>
+    <h2>
     <ul>
-<h2><a href="index.html">Index</a></h2>
-<h2><a href="about.html">About</a></h2>
-<h2><a href="contact.html">Contact</a></h2>
+<li><a href="index.html">Index</a></li>
+<li><a href="about.html">About</a></li>
+<li><a href="contact.html">Contact</a></li>
 </ul>
+</h2>
 </nav>
 <h3>About Me</h3>
 <img src="MINIME.jpg" alt="MeIcon" width="300" height="300">
