--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,13 @@
 <h1>My Blog</h1>
 </header>
 <nav>
+    <h2>
     <ul>
-<h2><a href="index.html">Index</a></h2>
-<h2><a href="about.html">About</a></h2>
-<h2><a href="contact.html">Contact</a></h2>
+<li><a href="index.html">Index</a></li>
+<li><a href="about.html">About</a></li>
+<li><a href="contact.html">Contact</a></li>
 </ul>
+</h2>
 </nav>
 <h3>Contact Me:</h3>
 <form action="/action_page.php">
