--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<header>
+<head>
 <h1>My Blog</h1>
-</header>
+</head>
 <nav>
     <h2>
     <ul>
@@ -16,7 +16,7 @@
 <h3>Contact Me:</h3>
 <form action="/action_page.php">
   <label for="name">Name:</label><br>
-  <input type="text" id="name" name="name""><br>
+  <input type="text" id="name" name="name"><br>
   <label for="Email">Email:</label><br>
   <input type="text" id="Email" name="Email"><br>
 <label for="Reason">Reason:</label><br>
