--- a/contact.html
+++ b/contact.html
@@ -17,14 +17,14 @@
   <input type="text" id="name" name="name"><br>
   <label for="Email">Email:</label><br>
   <input type="text" id="Email" name="Email"><br>
-<label for="Reason">Reason:</label><br>
+<label>Reason:</label><br>
 <select id="myDropdown" name="myDropdown">
   <option value="hi">Saying hi</option>
   <option value="contractor">Looking for a contractor</option>
   <option value="interview">Interested in an interview</option>
 </select><br>
   <label for="Comment">Comments:</label><br>
-  <input type="text" id="Comment" name="Comment""><br>
+  <input type="text" id="Comment" name="Comment"><br>
   <br>
   <input type="submit" value="Submit">
 </form>
