--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<head>
+<head></head>
 <h1>My Blog</h1>
-</head>
 <nav>
     <ul>
 <li><a href="index.html">Index</a></li>
