--- a/about.html
+++ b/about.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
+     <head>
+    <title>About</title>
+  </head>
 <body>
-<head>
 <h1>My Blog</h1>
-</head>
 <nav>
     <ul>
 <li><a href="index.html">Index</a></li>
