--- a/contact.html
+++ b/contact.html
@@ -13,21 +13,25 @@
 </ul>
 </nav>
 <h3>Contact Me:</h3>
-<form action="/action_page.php">
-  <label for="name">Name:</label><br>
-  <input type="text" id="name" name="name"><br>
-  <label for="Email">Email:</label><br>
-  <input type="text" id="Email" name="Email"><br>
-<label>Reason:</label><br>
-<select id="myDropdown" name="myDropdown">
-  <option value="hi">Saying hi</option>
-  <option value="contractor">Looking for a contractor</option>
-  <option value="interview">Interested in an interview</option>
-</select><br>
-  <label for="Comment">Comments:</label><br>
-  <input type="text" id="Comment" name="Comment"><br>
-  <br>
-  <input type="submit" value="Submit">
-</form>
+<form name="contact" method="POST" data-netlify="true">
+  <p>
+    <label>Your Name: <input type="text" name="name" /></label>
+  </p>
+  <p>
+    <label>Your Email: <input type="email" name="email" /></label>
+  </p>
+  <p>
+    <label>Reason: <select name="reason[]" multiple>
+      <option value="hi">Saying hi</option>
+      <option value="contractor">Looking for a contractor</option>
+      <option value="interview">Interested in an interview</option>
+    </select></label>
+  </p>
+  <p>
+    <label>Comment: <textarea name="comment"></textarea></label>
+  </p>
+  <p>
+    <button type="submit">Send</button>
+  </p>
 </body>
 </html>
