--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ The player can try to escape, but the chances are low due to the hound's speed, 
 </table>
 </article>
 <h4>Email Signup</h4>
-<form name="contact" method="POST" data-netlify="true">
+<form name="index" method="POST" data-netlify="true">
   <p>
     <label>Your Email: <input type="email" name="email" /></label>
   </p>
