--- a/contact.html
+++ b/contact.html
@@ -15,13 +15,13 @@
 <h3>Contact Me:</h3>
 <form name="contact" method="POST" data-netlify="true">
   <p>
-    <label>Your Name: <input type="text" name="name" /></label>
+    <label>Your Name: <input type="text" name="contactname" /></label>
   </p>
   <p>
-    <label>Your Email: <input type="email" name="email" /></label>
+    <label>Your Email: <input type="email" name="contactemail" /></label>
   </p>
   <p>
-    <label>Reason: <<select id="myDropdown" name="myDropdown">
+    <label>Reason: <select id="myDropdown" name="myDropdown">
       <option value="hi">Saying hi</option>
       <option value="contractor">Looking for a contractor</option>
       <option value="interview">Interested in an interview</option>
