form name experiment

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 </ul>
 </nav>
 <h3>Contact Me:</h3>
-<form name="contact" method="POST" data-netlify="true">
+<form name="tryagain" method="POST" data-netlify="true">
   <p>
     <label>Your Name: <input type="text" name="contactname" /></label>
   </p>
