--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
     <label>Your Email: <input type="email" name="contactemail" /></label>
   </p>
   <p>
-    <label>Reason: <select name="Reason[]" multiple>
+    <label>Reason: <select id="reason" name="reason"></select>
       <option value="hi">Saying hi</option>
       <option value="contractor">Looking for a contractor</option>
       <option value="interview">Interested in an interview</option>
