--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <li><a href="contact.html">Contact</a></li>
 </ul>
 </nav>
-    <article>
+<section id="Blog">
+    <article class="blog-post">
         <h3>The Biopanther</h3>
         <img src="HUDexample.png" alt="BiopantherFight" width="500" height="333">
         <p>Posted <time>2025-09-28</time>               Author: Ben T</p>
@@ -74,6 +75,7 @@ The player can try to escape, but the chances are low due to the hound's speed, 
   </tfoot>
 </table>
 </article>
+</section>
 <h4>Email Signup</h4>
 <form name="index" method="POST" data-netlify="true">
   <p>
