--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
 <li><a href="contact.html">Contact</a></li>
 </ul>
 </nav>
+<section id="Blog">
 <h3>About Me</h3>
 <div class="img-cont">
 <img src="MINIME.jpg" alt="MeIcon" width="300" height="300">
@@ -25,6 +26,7 @@ I've always been interested in games and interactive storytelling medium and hop
 <li>Applications: Adobe PS, Audition, Premiere, Krita, Figma, Tabletopia</li>
 <li>Skills: Level Design, UI Design, Game Writing, Game Design, Concept Design</li>
 <li>Construct 3, Unity, Unreal Engine, RPG Maker MV</li>
+</section>
 </ul>
 </body>
 </html>
