--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <nav>
     <ul>
 <li><a href="index.html">Index</a></li>
-<li><aside><a href="about.html">About</a></aside></li>
+<li><aside href="about.html">About</aside></li>
 <li><a href="contact.html">Contact</a></li>
 </ul>
 </nav>
