--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     <label>Your Email: <input type="email" name="contactemail" /></label>
   </p>
   <p>
-    label Reason: <select id="myDropdown" name="myDropdown">
+    <label> Reason: <select id="myDropdown" name="myDropdown">
       <option value="hi">Saying hi</option>
       <option value="contractor">Looking for a contractor</option>
       <option value="interview">Interested in an interview</option>
