--- a/about.html
+++ b/about.html
@@ -23,9 +23,11 @@ I mainly focus on game design, writing, and storytelling.<br>
 I've always been interested in games and interactive storytelling medium and hope to expand it's potential to create unique and exciting experiences.</p>
 <p>What I can do</p>
 <ul>
+  <div class="list">
 <li>Applications: Adobe PS, Audition, Premiere, Krita, Figma, Tabletopia</li>
 <li>Skills: Level Design, UI Design, Game Writing, Game Design, Concept Design</li>
 <li>Construct 3, Unity, Unreal Engine, RPG Maker MV</li>
+</div>
 </section>
 </ul>
 </body>
