--- a/about.html
+++ b/about.html
@@ -22,12 +22,15 @@
 I mainly focus on game design, writing, and storytelling.<br>
 I've always been interested in games and interactive storytelling medium and hope to expand it's potential to create unique and exciting experiences.</p>
 <p>What I can do</p>
+</section>
 <ul>
-  <div class="list">
-<li>Applications: Adobe PS, Audition, Premiere, Krita, Figma, Tabletopia</li>
-<li>Skills: Level Design, UI Design, Game Writing, Game Design, Concept Design</li>
-<li>Construct 3, Unity, Unreal Engine, RPG Maker MV</li>
-</div>
+  <section id="list">
+   <h4>Applications:</h4>
+<li> Adobe PS</li><li>Premiere</li><li>Krita</li><li>Figma</li><li>Tabletopia</li>
+<h4>Skills:</h4>
+<li>Level Design</li><li>UI Design</li><li>Game Writing</li><li>Game Design</li><li>Concept Design</li>
+<h4>Engines</h4>
+<li>Construct 3</li><li>Unity</li><li>Unreal Engine</li><li>RPG Maker MV</li>
 </section>
 </ul>
 </body>
