--- a/about.html
+++ b/about.html
@@ -25,13 +25,16 @@ I've always been interested in games and interactive storytelling medium and hop
 </section>
 <ul>
   <section id="list">
+    <div class="list"></div>
    <h4>Applications:</h4>
 <li> Adobe PS</li><li>Premiere</li><li>Krita</li><li>Figma</li><li>Tabletopia</li>
+</div><div class="list">
 <h4>Skills:</h4>
 <li>Level Design</li><li>UI Design</li><li>Game Writing</li><li>Game Design</li><li>Concept Design</li>
-<h4>Engines</h4>
+</div><div class="list">
+  <h4>Engines</h4>
 <li>Construct 3</li><li>Unity</li><li>Unreal Engine</li><li>RPG Maker MV</li>
-</section>
+</div></section>
 </ul>
 </body>
 </html>
