--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@ I've always been interested in games and interactive storytelling medium and hop
 </section>
 <ul>
   <section id="list">
-    <div class="list"></div>
+    <div class="list">
    <h4>Applications:</h4>
 <li> Adobe PS</li><li>Premiere</li><li>Krita</li><li>Figma</li><li>Tabletopia</li>
 </div><div class="list">
