--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@ I've always been interested in games and interactive storytelling medium and hop
 <h4>Skills:</h4>
 <li>Level Design</li><li>UI Design</li><li>Game Writing</li><li>Game Design</li><li>Concept Design</li>
 </div><div class="list">
-  <h4>Engines</h4>
+  <h4>Engines:</h4>
 <li>Construct 3</li><li>Unity</li><li>Unreal Engine</li><li>RPG Maker MV</li>
 </div></section>
 </ul>
