--- a/about.html
+++ b/about.html
@@ -21,7 +21,6 @@
 <p>My name is Benjamin Trinh and I am a game design student in the Games and Interactive Media Major at Michigan State University.<br>
 I mainly focus on game design, writing, and storytelling.<br>
 I've always been interested in games and interactive storytelling medium and hope to expand it's potential to create unique and exciting experiences.</p>
-</section>
 <ul>
   <section id="list">
     <div class="list">
@@ -33,7 +32,8 @@ I've always been interested in games and interactive storytelling medium and hop
 </div><div class="list">
   <h4>Engines:</h4>
 <li>Construct 3</li><li>Unity</li><li>Unreal Engine</li><li>RPG Maker MV</li>
-</div></section>
+</div></section id="list">
 </ul>
+</section id="Blog">
 </body>
 </html>
