--- a/about.html
+++ b/about.html
@@ -26,13 +26,16 @@ I've always been interested in games and interactive storytelling medium and hop
     <div class="list">
    <h4>Applications:</h4>
 <li> Adobe PS</li><li>Premiere</li><li>Krita</li><li>Figma</li><li>Tabletopia</li>
-</div><div class="list">
+</div>
+<div class="list">
 <h4>Skills:</h4>
 <li>Level Design</li><li>UI Design</li><li>Game Writing</li><li>Game Design</li><li>Concept Design</li>
-</div><div class="list">
+</div>
+<div class="list">
   <h4>Engines:</h4>
 <li>Construct 3</li><li>Unity</li><li>Unreal Engine</li><li>RPG Maker MV</li>
-</div></section id="list">
+</div>
+</section id="list">
 </ul>
 </section id="Blog">
 </body>
