--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
 <h3>About Me</h3>
 <div class="img-cont">
 <img src="MINIME.jpg" alt="MeIcon" width="300" height="300">
+<p>My icon</p>
 </div>
 <p>My name is Benjamin Trinh and I am a game design student in the Games and Interactive Media Major at Michigan State University.<br>
 I mainly focus on game design, writing, and storytelling.<br>
