--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 <h1>My Blog</h1>
 <nav>
     <ul>
+      <section id="nav">
 <li><a href="index.html">Index</a></li>
 <li><a href="about.html">About</a></li>
 <li><a href="contact.html">Contact</a></li>
+</section>
 </ul>
 </nav>
 <section id="Blog">
