--- a/about.html
+++ b/about.html
@@ -29,15 +29,15 @@ I've always been interested in games and interactive storytelling medium and hop
   <section id="list">
     <div class="list">
    <h4>Applications:</h4>
-<li> Adobe PS</li><li>Premiere</li><li>Krita</li><li>Figma</li><li>Tabletopia</li>
+<li> Adobe PS,</li><li>Premiere,</li><li>Krita,</li><li>Figma,</li><li>Tabletopia,</li>
 </div>
 <div class="list">
 <h4>Skills:</h4>
-<li>Level Design</li><li>UI Design</li><li>Game Writing</li><li>Game Design</li><li>Concept Design</li>
+<li>Level Design,</li><li>UI Design,</li><li>Game Writing,</li><li>Game Design,</li><li>Concept Design,</li>
 </div>
 <div class="list">
   <h4>Engines:</h4>
-<li>Construct 3</li><li>Unity</li><li>Unreal Engine</li><li>RPG Maker MV</li>
+<li>Construct 3,</li><li>Unity,</li><li>Unreal Engine,</li><li>RPG Maker MV,</li>
 </div>
 </section id="list">
 </ul>
